# apfd

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bcBuild.conf  build.conf  build.ps1  build.sh
apfd/: CMakeLists.txt
apfd/include/: apfdservice.h  apfdworker.h  install.h  run.h
apfd/src/: apfdservice.cc  apfdworker.cc  install.cc  main.cc  run.cc
cJSON/: CMakeLists.txt
src/: CMakeLists.txt  apfdservice.cc  apfdservice.h  apfdworker.cc  apfdworker.h  install.cc  install.h  main.cc  messagethread.cc  messagethread.h  run.cc  run.h  wslutil.cc  wslutil.h
